fixed card and file image responsiveness, change file input text field to align theme color.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,3 +77,7 @@
       @apply bg-background text-foreground;
     }
   }
+
+  input::file-selector-button {
+    color: #ffffff;
+  }
